task5/tests/our-tests/output/t0.out
lli: <stdin>:41:16: error: use of undefined value '%-21943'
%t8 = sdiv i32 %-21943, %t9
               ^

